--- a/index.html
+++ b/index.html
@@ -31,7 +31,20 @@
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
                     <div class="parametro-senha-checkbox">
-                        <input name="maiusculo" type="checkbox"class=" checkbox"checked>
+                        <input name="maiusculo" type="checkbox"class=" checkbox" checked>
+                        <label for="maiusculo">Letras Maiúsculas</label>
+                    </div>
+                      <div class="parametro-senha-checkbox">
+                        <input name="minusculo" type="checkbox"class=" checkbox" checked>
+                        <label for="minusculo">Letras Minúsculas</label>
+                    </div>
+                    <div class="parametro-senha-checkbox">
+                        <input name="simbolos" type="checkbox"class=" checkbox" checked>
+                        <label for="simbolos">Símbolos</label>
+                    </div>
+                    <div class="parametro-senha-checkbox">
+                        <input name="numeros" type="checkbox"class=" checkbox" checked>
+                        <label for="numeros">Números</label>
                     </div>
                 </div>
                 <div class="parametro-senha">
